--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -13,6 +13,9 @@
         %td= post.title
         %td= post.body
         %td= post.starred
+        %td= post.born_on
+        %td= post.starred_at
+        %td= post.email
         %td= link_to 'Show', post
         %td= link_to 'Edit', edit_post_path(post)
         %td= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' }
