--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -6,8 +6,14 @@
   %strong Body:
   = @post.body
 %p
+  %strong Born On:
+  = @post.born_on
+%p
   %strong Starred:
   = @post.starred
+%p
+  %strong Started on:
+  = @post.starred_at
 = link_to 'Edit', edit_post_path(@post)
 |
 = link_to 'Back', posts_path
